# Merlin

./: .~lock.server.key#  Cargo.toml  README.md  cert.pem  server.crt  server.csr  server.key
src/: main.rs  server.rs  test.rs
src/DataStore/: creation_queries.rs  db_models.rs  delete_queries.rs  insert_queries.rs  queries.rs  select_queries.rs  sql_execution_handler.rs  test.rs  tests.rs  update_queries.rs
src/State/: state.rs  state_types.rs
src/ascii_art/: knightascii.txt
src/auth/: api_data_handler.rs  authentication_handler.rs  oauth_locations.rs  readme.MD  ws_auth_handler.rs
src/board/: readme.MD
src/common/: common_error_logic.rs  common_response_logic.rs  response_logic.rs
src/communication/: communication_handler.rs  communication_handler_helpers.rs  communication_router.rs  communication_types.rs  data_capturer.rs  data_fetcher.rs  handler.rs  helpers.rs  permission_configs.rs  readme.MD  router.rs  test.rs  types.rs
src/data_store/: creation_queries.rs  db_models.rs  delete_queries.rs  insert_queries.rs  readme.MD  select_queries.rs  sql_execution_handler.rs  test.rs  update_queries.rs
src/integration/: router.rs  types.rs
src/integrations/: readme.MD
src/logging/: console.rs
src/rabbitmq/: rabbit.rs  test.rs
src/rooms/: handler.rs  permission_configs.rs  readme.MD  room_handler.rs
src/state/: owner_queue.rs  readme.MD  state.rs  state_helpers.rs  state_types.rs  tests.rs  types.rs
src/vs_response/: handler.rs  router.rs  vs_response_handler.rs  vs_response_router.rs  vs_response_types.rs
src/ws_fan/: fan.rs  readme.MD
(+21 files in other folders)
