[package]
name = "GeneralControlServer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures-channel = "0.3"
futures-util = "0.3"
tokio  =  { version = "1.0.0", default-features = true, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
log = "0.4"
pretty_env_logger = "0.4"

tokio-postgres = "0.7.0"
chrono = "0.4"