[package]
name = "GeneralControlServer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3"
url = "2.0.0"
log = "0.4"
tokio-postgres = "0.7.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
http = "0.2.5"